# geop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: book-deploy.yaml
crates/geop/: Cargo.toml
crates/geop-algebra/: Cargo.toml
crates/geop-algebra/src/: algebra_error.rs  bernstein_basis.rs  bernstein_polynomial.rs  bspline_basis.rs  bspline_curve.rs  convex_hull.rs  efloat.rs  lib.rs  line.rs  monomial_polynom.rs  nurbs_curve.rs  triangle.rs
crates/geop-booleans/: Cargo.toml
crates/geop-booleans/src/: lib.rs
crates/geop-geometry/: Cargo.toml
crates/geop-geometry/src/: basis.rs  bounding_box.rs  color.rs  coordinate_system.rs  efloat.rs  geometry_error.rs  lib.rs  point.rs  roated_bounding_box.rs
crates/geop-geometry/src/curve_curve_intersection/: circle_circle.rs  circle_line.rs  curve_curve.rs  ellipse_ellipse.rs  ellipsis_ellipsis.rs  helix_circle.rs  helix_line.rs  line_line.rs  mod.rs  numerical.rs
crates/geop-geometry/src/curve_surface_intersection/: circle_cylinder.rs  circle_plane.rs  circle_sphere.rs  curve_surface.rs  line_cylinder.rs  line_plane.rs  line_sphere.rs  mod.rs
crates/geop-geometry/src/curves/: bernstein_polynomial.rs  bounds.rs  bspline_curve.rs  circle.rs  curve.rs  ellipse.rs  ellipsis.rs  helix.rs  line.rs  mod.rs  monomial_polynom.rs  nurbs_curve.rs
crates/geop-geometry/src/curves/numerical_representations/: algebraic_curve.rs  implicit_curve.rs
crates/geop-geometry/src/curves/parameter_spaces/: circle_like.rs  mod.rs
crates/geop-geometry/src/efloat/: efloat.rs  mod.rs  nonzero_efloat.rs  positive_efloat.rs  semi_positive_efloat.rs
crates/geop-geometry/src/geometry/: mod.rs
crates/geop-geometry/src/geometry/curves/: circle.rs  circle3d.rs  curve.rs  curve2d.rs  curve3d.rs  ellipse.rs  ellipse3d.rs  line.rs  line3d.rs  mod.rs
crates/geop-geometry/src/geometry/points/: mod.rs  point.rs  point2d.rs  point3d.rs
crates/geop-geometry/src/geometry/surfaces/: cylinder.rs  linear_surface.rs  mod.rs  plane.rs  sphere.rs  surface.rs  surface2d.rs  surface3d.rs
crates/geop-geometry/src/intersections/: circle_circle.rs  curve_curve.rs  intersections_surface.rs  line_line.rs  line_plane.rs  line_sphere.rs  mod.rs  plane_plane.rs  plane_sphere.rs  sphere_sphere.rs  surface_surface.rs
crates/geop-geometry/src/points/: mod.rs  nonzero_point.rs  normalized_point.rs  point.rs
crates/geop-geometry/src/primitives/: point.rs  triangle.rs
crates/geop-geometry/src/surface_surface_intersection/: mod.rs  plane_plane.rs  plane_sphere.rs  sphere_sphere.rs  surface_surface.rs
crates/geop-geometry/src/surfaces/: cylinder.rs  mod.rs  plane.rs  sphere.rs  surface.rs
crates/geop-geometry/src/transforms/: mod.rs
crates/geop-rasterize/: Cargo.toml
crates/geop-rasterize/src/: boundingbox.rs  contour.rs  edge.rs  edge_buffer.rs  edge_loop.rs  face.rs  functions.rs  lib.rs  object.rs  triangle_buffer.rs  vertex_buffer.rs  vertex_normal_buffer.rs  volume.rs
crates/geop-simple-shapes/: Cargo.toml
crates/geop-topology/: Cargo.toml
crates/geop-topology/src/: debug_data.rs  lib.rs  topology_error.rs  topology_scene.rs
crates/geop-wgpu/: Cargo.toml  shell.nix
crates/geop-wgpu/src/: camera_pipeline.rs  device_adapter.rs  headless_renderer.rs  lib.rs  main.rs  pipeline_manager.rs  point_render_pipeline.rs  render_pipeline.rs  render_pipeline_edge.rs  render_pipeline_triangle.rs  render_pipeline_vertex.rs  shader.wgsl  shader_edge.wgsl  shader_triangle.wgsl  shader_vertex.wgsl  state.rs  texture.rs  window.rs  window_state.rs
crates/geop-wgpu/src/rasterizer/: edge.rs
crates/geop/src/: algebra_error.rs  lib.rs  (+6 more)
crates/modern-brep-kernel-book/: .gitignore  Cargo.toml
crates/modern-brep-kernel-book/src/: SUMMARY.md  chapter_0_overview.md  chapter_1_algebra.md  chapter_1_algebra_b_splines.md  chapter_1_algebra_bernstein.md  chapter_1_algebra_efloat.md  chapter_1_algebra_monomial.md  chapter_1_algebra_nurbs.md  chapter_1_overview.md  chapter_1_root_finding.md  chapter_2_geometry.md  chapter_2_geometry_curves.md  chapter_2_geometry_intersections.md  chapter_2_geometry_surfaces.md  chapter_3_topology.md  chapter_3_topology_containment.md  chapter_3_topology_contours.md  chapter_3_topology_edges.md  chapter_3_topology_faces.md  chapter_3_topology_faces_boolean.md  chapter_3_topology_shells.md  chapter_3_topology_volumes.md  chapter_4_rasterization.md  chapter_4_rasterization_curves.md  chapter_4_rasterization_solids.md  chapter_4_rasterization_surfaces.md  chapter_5_topology_boolean.md  chapter_5_topology_faces_boolean.md  chapter_5_topology_solids_boolean.md  chapter_6_faq.md  lib.rs
crates/modern-brep-kernel-book/src/graphics/: mod.rs
crates/modern-brep-kernel-book/src/graphics/algebra/: bernstein.rs  bspline.rs  convex_hull.rs  mod.rs  monomial_polynom.rs  nurbs.rs
crates/modern-brep-kernel-book/src/graphics/booleans/: face_booleans.rs  mod.rs  volume_booleans.rs
crates/modern-brep-kernel-book/src/graphics/geometry/: boundingsbox.rs  geodesics.rs  intersections.rs  mod.rs  primitive_curve_intersections.rs  primitive_curves.rs  primitive_surfaces.rs  surface_log_exp.rs
crates/modern-brep-kernel-book/src/graphics/topology/: contours.rs  edges.rs  face.rs  face_contains.rs  mod.rs  shell.rs
crates/modern-brep-kernel-book/src/images/: bspline.drawio  topology.drawio  union_with_topsimp.drawio
modern-brep-kernel-book/: book.toml
modern-brep-kernel-book/src/: SUMMARY.md  chapter_1_overview.md  chapter_2_geometry.md  chapter_3_topology.md
(+190 files in other folders)
