[workspace]
resolver = "2"

members = [
    "crates/geop-geometry",
    "crates/geop-topology",
    "crates/geop-rasterize",
    "crates/geop-wgpu",
    "crates/modern-brep-kernel-book",
]

[workspace.dependencies.geop-geometry]
version = "0.1.0"
path = "crates/geop-geometry"

[workspace.dependencies.geop-topology]
version = "0.1.0"
path = "crates/geop-topology"

[workspace.dependencies.geop-rasterize]
version = "0.1.0"
path = "crates/geop-rasterize"

[workspace.dependencies.geop-wgpu]
version = "0.1.0"
path = "crates/geop-wgpu"

[workspace.dependencies.modern-brep-kernel-book]
version = "0.1.0"
path = "crates/modern-brep-kernel-book"


