[workspace]
resolver = "2"

members = [
    "crates/geop",
#    "crates/geop-booleans",
#    "crates/geop-rasterize",
#    "crates/geop-wgpu",
#    "crates/modern-brep-kernel-book",
]

[workspace.dependencies.geop]
version = "0.1.0"
path = "crates/geop"

#[workspace.dependencies.geop-booleans]
#version = "0.1.0"
#path = "crates/geop-booleans"

#[workspace.dependencies.geop-rasterize]
#version = "0.1.0"
#path = "crates/geop-rasterize"

#[workspace.dependencies.geop-wgpu]
#version = "0.1.0"
#path = "crates/geop-wgpu"

#[workspace.dependencies.modern-brep-kernel-book]
#version = "0.1.0"
#path = "crates/modern-brep-kernel-book"


