[package]
name = "geop-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0", features = ["blas"] }
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
