[package]
name = "geop-rasterize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geop-geometry.workspace=true
geop-topology.workspace=true
bytemuck = { version = "1.13.1", features = [ "derive" ] }
