[package]
name = "geop-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = [ "derive" ] }
geop-geometry.workspace=true
geop-topology.workspace=true
geop-rasterize.workspace=true
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.28.6"
cgmath = "0.18"
