[package]
name = "geop-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = [ "derive" ] }
geop-algebra.workspace=true
geop-geometry.workspace=true
geop-topology.workspace=true
geop-rasterize.workspace=true
geop-booleans.workspace=true
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = { version = "22.0", features = ["spirv"] }
winit = { version = "0.29", features = ["rwh_05"] }
cgmath = "0.18"
futures-intrusive = "0.5"
image = "0.25.2"

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
rstest = "0.21.0"
