[package]
name = "modern-brep-kernel-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geop-algebra.workspace=true
geop-geometry.workspace=true
geop-topology.workspace=true
geop-rasterize.workspace=true
geop-wgpu.workspace=true
geop-booleans.workspace=true

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
rstest = "0.21.0"
